--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.6",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@types/bcryptjs": "^3.0.0",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.3",
